refactor: clean legacy and adapter and old registry